# fabrica-projetosenai

./: README.md  cli.py  pipeline_etl.py  processamento_2.ipynb  processamento_dados.ipynb  pyproject.toml  requirements.txt  setup.py  simulador_industrial_hibrido.py  treinar_modelo.py  verificar_diferenca.py
app/: app.py
app/config/: config.yaml  paths.py  settings.py
app/data/: data_dictionary.md  data_loader.py
app/data/gold/: kpis_daily_gold.csv
app/data/processed/: eventos_silver.csv  producao_silver.csv
app/data/quality_reports/: quality_report_20251125_193145.json
app/data/raw/: eventos_industriais.csv  eventos_raw.csv  historico_producao_1ano.csv  producao_raw.csv  telemetria_detalhada_30dias.csv  uns_tags.json
app/data/silver/: eventos_silver.csv  producao_silver.csv
app/data/silver/parquet/eventos/data=2024-11-26/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-01/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-06/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-12/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-13/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-15/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-16/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-17/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-19/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-21/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-23/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-30/: data.parquet
app/data/silver/parquet/eventos/data=2024-12-31/: data.parquet
app/data/silver/parquet/eventos/data=2025-01-01/: data.parquet
app/data/silver/parquet/eventos/data=2025-01-02/: data.parquet
app/data/silver/parquet/eventos/data=2025-01-03/: data.parquet
app/data/silver/parquet/eventos/data=2025-01-04/: data.parquet
app/data/silver/parquet/eventos/data=2025-01-06/: data.parquet
app/data/silver/parquet/eventos/data=2025-01-09/: data.parquet
app/data/silver/parquet/eventos/data=2025-01-11/: data.parquet
app/data/silver/parquet/eventos/data=2025-01-12/: data.parquet
app/data/silver/parquet/eventos/data=2025-01-13/: data.parquet
app/data/silver/parquet/eventos/data=2025-01-14/: data.parquet
app/domain/: aggregates.py  alerts.py  formatters.py  kpis.py
app/ml/: predictor.py
app/models/: rf_defeito.joblib
app/processing/: data_processing.py  safe_types.py
app/viz/: plotting.py  ui_components.py
data/processed/: eventos_silver.csv  producao_silver.csv
data/raw/: eventos_industriais.csv
reports/: training_report_20251125_194445.json
tests/: test_data_quality.py
(+528 files in other folders)
